--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "unitcluster core package",
   "main": "index.js",
   "dependencies": {
-    "stdout-stream": "^1.4.1"
+    "stdout-stream": "^1.4.1",
+    "stack-trace": "0.0.10"
   },
   "devDependencies": {},
   "author": "Sasha Zmts",
